@@ -10,6 +10,8 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 
+2017-11-09 niel
+	Fix: Correct status code for "Missing parameter (apikey)" redirect.
 2017-11-06 niel
 	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.1.0
 
